# aerodb-py

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
aerodb/: __init__.py  auth.py  client.py  database.py  functions.py  realtime.py  storage.py  types.py
docs/: API_REFERENCE.md  ARCHITECTURE.md  EXAMPLES.md  GETTING_STARTED.md  README.md
tests/: conftest.py  test_auth.py  test_database.py  test_functions.py  test_realtime.py  test_storage.py
